Fix for overflow issue.

--- a/src/components/Sprite/Sprite.scss
+++ b/src/components/Sprite/Sprite.scss
@@ -11,9 +11,6 @@
 
   @include typed-colour-modifiers;
 }
-.tooltip--above .tooltip__content {
-  bottom: 100%;
-}
 
 .sprite__pokemon {
   @extend %image-element;
